2005-11-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lanplus-sessions.h,
	libfreeipmi/src/ipmi-lanplus-sessions.c (ipmi_calculate_k3):
	Removed function.

	* libfreeipmi/src/ipmi-lanplus-sessions.h,
	libfreeipmi/src/ipmi-lanplus-sessions.c
	(assemble_ipmi_lanplus_pkt): Initial commit of this function,
	which atleast compiles.

2005-11-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lanplus-sessions.h,
	libfreeipmi/src/ipmi-lanplus-sessions.c (ipmi_calculate_sik,
	ipmi_calculate_k1, ipmi_calculate_k2, ipmi_calculate_k3,
	__ipmi_calculate_k, __ipmi_init_gcrypt, fill_lanplus_payload): New
	functions.
	
2005-11-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-utils.c (ipmi_get_random_seed): Utilize
	#define checks for /dev/urandom and /dev/random.

	* libfreeipmi/src/ipmi-utils.h, libfreeipmi/src/ipmi-utils.c
	(ipmi_get_random): New function.

	* libfreeipmi/src/ipmi-error.h (RMCPPLUS_STATUS_VALID): Re-work to
	remove compiler warnings.

	* ipmipower/src/ipmipower_util.c (get_rand): Utilize
	ipmi_get_random.

	* freeipmi.spec.in: Add gcrypt dependencies.
	
2005-11-10  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-interface.h,
	libfreeipmi/src/ipmi-lanplus-sessions.h: Fix potential macro bugs.
	
2005-11-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-chassis-cmds.h,
	libfreeipmi/src/ipmi-chassis-cmds.c: Support IPMI Chassis Identify
	command.

	* libfreeipmi/src/ipmi-chassis-cmds.h,
	libfreeipmi/src/ipmi-chassis-cmds.c (fill_cmd_chassis_identify):
	New function.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_check.c,
	ipmipower/src/ipmipower_powercmd.c: Add additional comments,
	notes, and details on IPMI compliance workarounds.
	
2005-11-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-msg-support-cmds.h,
	libfreeipmi/src/ipmi-msg-suppoert-cmds.c
	(fill_cmd_get_channel_auth_caps_v20): Require user to pass in BMC
	channel number.

	* ipmiping/src/ipmiping.c (createpacket): Updated for new API.
