@@ -616,12 +616,198 @@ fill_lanplus_trlr_session(fiid_template_t tmpl_trlr,
 }
 
 int8_t
-fill_lanplus_payload(u_int8_t confidentiality_algorithm,
-                     fiid_obj_t obj_cmd,
-                     fiid_template_t tmpl_cmd,
-                     u_int8_t *key,
-                     u_int32_t key_len,
-                     fiid_obj_t obj_payload)
+fill_lanplus_open_session (u_int8_t message_tag,
+                           u_int8_t requested_maximum_privilege_level,
+                           u_int32_t remote_console_session_id,
+                           u_int8_t authentication_algorithm,
+                           u_int8_t integrity_algorithm,
+                           u_int8_t confidentiality_algorithm,
+                           fiid_obj_t obj_cmd)
+{
+  if (!obj_cmd
+      || !IPMI_PRIV_LEVEL_VALID(requested_maximum_privilege_level)
+      || !IPMI_AUTHENTICATION_ALGORITHM_VALID(authentication_algorithm)
+      || !IPMI_INTEGRITY_ALGORITHM_VALID(integrity_algorithm)
+      || !IPMI_CONFIDENTIALITY_ALGORITHM_VALID(confidentiality_algorithm))
+    {
+      errno = EINVAL;
+      return (-1);
+    }
+  
+  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_open_session_rq);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_open_session_rq, 
+                "message_tag", 
+                message_tag);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_open_session_rq, 
+                "requested_maximum_privilege_level", 
+                requested_maximum_privilege_level);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq, 
+                "remote_console_session_id",
+                remote_console_session_id);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "authentication_payload.payload_type",
+                IPMI_AUTHENTICATION_PAYLOAD_TYPE);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "authentication_payload.payload_length",
+                IPMI_AUTHENTICATION_PAYLOAD_LEN);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq, 
+                "authentication_payload.authentication_algorithm",
+                authentication_algorithm);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "integrity_payload.payload_type",
+                IPMI_INTEGRITY_PAYLOAD_TYPE);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "integrity_payload.payload_length",
+                IPMI_INTEGRITY_PAYLOAD_LEN);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq, 
+                "integrity_payload.integrity_algorithm",
+                integrity_algorithm);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "confidentiality_payload.payload_type",
+                IPMI_CONFIDENTIALITY_PAYLOAD_TYPE);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq,
+                "confidentiality_payload.payload_length",
+                IPMI_CONFIDENTIALITY_PAYLOAD_LEN);
+  FIID_OBJ_SET (obj_cmd,
+                tmpl_lanplus_open_session_rq, 
+                "confidentiality_payload.confidentiality_algorithm",
+                confidentiality_algorithm);
+
+  return (0);
+}
+
+int8_t
+fill_lanplus_rakp_message_1(u_int8_t message_tag,
+                            u_int32_t managed_system_session_id,
+                            u_int8_t *remote_console_random_number,
+                            u_int32_t remote_console_random_number_len,
+                            u_int8_t requested_maximum_privilege_level,
+                            u_int8_t nameonly_lookup_flag,
+                            u_int8_t *username,
+                            u_int32_t username_len,
+                            fiid_obj_t obj_cmd)
+{
+  if (!obj_cmd
+      || !remote_console_random_number
+      || remote_console_random_number_len < IPMI_REMOTE_CONSOLE_RANDOM_NUMBER_LEN
+      || !IPMI_PRIV_LEVEL_VALID(requested_maximum_privilege_level)
+      || !IPMI_USERNAME_LOOKUP_VALID(nameonly_lookup_flag)
+      || (username && username_len > IPMI_SESSION_MAX_USERNAME_LEN))
+    {
+      errno = EINVAL;
+      return (-1);
+    }
+
+  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_rakp_message_1);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_1, 
+                "message_tag", 
+                message_tag);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_1, 
+                "managed_system_session_id", 
+                managed_system_session_id);
+  FIID_OBJ_SET_DATA (obj_cmd,
+                     tmpl_lanplus_rakp_message_1, 
+                     "remote_console_random_number",
+                     remote_console_random_number,
+                     remote_console_random_number_len);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_1, 
+                "requested_maximum_privilege_level", 
+                requested_maximum_privilege_level);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_1, 
+                "nameonly_lookup", 
+                nameonly_lookup_flag);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_1, 
+                "username_length", 
+                username_len);
+  FIID_OBJ_SET_DATA (obj_cmd,
+                     tmpl_lanplus_rakp_message_1, 
+                     "username",
+                     username,
+                     username_len);
+  
+  return (0);
+}
+
+int8_t
+fill_lanplus_rakp_message_3(u_int8_t message_tag,
+                            u_int8_t rmcpplus_status_code,
+                            u_int32_t managed_system_session_id,
+                            u_int8_t *key_exchange_authentication_code,
+                            u_int32_t key_exchange_authentication_code_len,
+                            fiid_obj_t obj_cmd)
+{
+  if (!obj_cmd || !RMCPPLUS_STATUS_VALID(rmcpplus_status_code))
+    {
+      errno = EINVAL;
+      return (-1);
+    }
+
+  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_rakp_message_3);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_3, 
+                "message_tag", 
+                message_tag);
+  FIID_OBJ_SET (obj_cmd, 
+                tmpl_lanplus_rakp_message_3, 
+                "managed_system_session_id", 
+                managed_system_session_id);
+
+  if (key_exchange_authentication_code && key_exchange_authentication_code_len > 0)
+    {
+      u_int32_t field_len;
+
+      if ((field_len = fiid_obj_field_len_bytes(tmpl_lanplus_rakp_message_3, 
+                                                "key_exchange_authentication_code")) < 0)
+        return (-1);
+      
+      if (key_exchange_authentication_code_len > field_len)
+        {
+          errno = EINVAL;
+          return (-1);
+        }
+
+      FIID_OBJ_SET_DATA (obj_cmd,
+                         tmpl_lanplus_rakp_message_3,
+                         "key_exchange_authentication_code",
+                         key_exchange_authentication_code,
+                         key_exchange_authentication_code_len);
+      FIID_OBJ_SET (obj_cmd,
+                    tmpl_lanplus_rakp_message_3,
+                    "key_exchange_authentication_code_len",
+                    key_exchange_authentication_code_len);
+    }
+  else
+    FIID_OBJ_SET (obj_cmd,
+                  tmpl_lanplus_rakp_message_3,
+                  "key_exchange_authentication_code_len",
+                  0);
+
+  return (0);
+}
+
+static int8_t
+_construct_payload(u_int8_t confidentiality_algorithm,
+                   fiid_obj_t obj_cmd,
+                   fiid_template_t tmpl_cmd,
+                   u_int8_t *key,
+                   u_int32_t key_len,
+                   fiid_obj_t obj_payload)
 {
   if (!IPMI_CONFIDENTIALITY_ALGORITHM_VALID(confidentiality_algorithm)
       || !obj_cmd
@@ -809,192 +995,6 @@ fill_lanplus_payload(u_int8_t confidentiality_algorithm,
   return (0);
 }
 
-int8_t
-fill_lanplus_open_session (u_int8_t message_tag,
-                           u_int8_t requested_maximum_privilege_level,
-                           u_int32_t remote_console_session_id,
-                           u_int8_t authentication_algorithm,
-                           u_int8_t integrity_algorithm,
-                           u_int8_t confidentiality_algorithm,
-                           fiid_obj_t obj_cmd)
-{
-  if (!obj_cmd
-      || !IPMI_PRIV_LEVEL_VALID(requested_maximum_privilege_level)
-      || !IPMI_AUTHENTICATION_ALGORITHM_VALID(authentication_algorithm)
-      || !IPMI_INTEGRITY_ALGORITHM_VALID(integrity_algorithm)
-      || !IPMI_CONFIDENTIALITY_ALGORITHM_VALID(confidentiality_algorithm))
-    {
-      errno = EINVAL;
-      return (-1);
-    }
-  
-  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_open_session_rq);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_open_session_rq, 
-                "message_tag", 
-                message_tag);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_open_session_rq, 
-                "requested_maximum_privilege_level", 
-                requested_maximum_privilege_level);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq, 
-                "remote_console_session_id",
-                remote_console_session_id);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "authentication_payload.payload_type",
-                IPMI_AUTHENTICATION_PAYLOAD_TYPE);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "authentication_payload.payload_length",
-                IPMI_AUTHENTICATION_PAYLOAD_LEN);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq, 
-                "authentication_payload.authentication_algorithm",
-                authentication_algorithm);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "integrity_payload.payload_type",
-                IPMI_INTEGRITY_PAYLOAD_TYPE);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "integrity_payload.payload_length",
-                IPMI_INTEGRITY_PAYLOAD_LEN);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq, 
-                "integrity_payload.integrity_algorithm",
-                integrity_algorithm);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "confidentiality_payload.payload_type",
-                IPMI_CONFIDENTIALITY_PAYLOAD_TYPE);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq,
-                "confidentiality_payload.payload_length",
-                IPMI_CONFIDENTIALITY_PAYLOAD_LEN);
-  FIID_OBJ_SET (obj_cmd,
-                tmpl_lanplus_open_session_rq, 
-                "confidentiality_payload.confidentiality_algorithm",
-                confidentiality_algorithm);
-
-  return (0);
-}
-
-int8_t
-fill_lanplus_rakp_message_1(u_int8_t message_tag,
-                            u_int32_t managed_system_session_id,
-                            u_int8_t *remote_console_random_number,
-                            u_int32_t remote_console_random_number_len,
-                            u_int8_t requested_maximum_privilege_level,
-                            u_int8_t nameonly_lookup_flag,
-                            u_int8_t *username,
-                            u_int32_t username_len,
-                            fiid_obj_t obj_cmd)
-{
-  if (!obj_cmd
-      || !remote_console_random_number
-      || remote_console_random_number_len < IPMI_REMOTE_CONSOLE_RANDOM_NUMBER_LEN
-      || !IPMI_PRIV_LEVEL_VALID(requested_maximum_privilege_level)
-      || !IPMI_USERNAME_LOOKUP_VALID(nameonly_lookup_flag)
-      || (username && username_len > IPMI_SESSION_MAX_USERNAME_LEN))
-    {
-      errno = EINVAL;
-      return (-1);
-    }
-
-  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_rakp_message_1);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_1, 
-                "message_tag", 
-                message_tag);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_1, 
-                "managed_system_session_id", 
-                managed_system_session_id);
-  FIID_OBJ_SET_DATA (obj_cmd,
-                     tmpl_lanplus_rakp_message_1, 
-                     "remote_console_random_number",
-                     remote_console_random_number,
-                     remote_console_random_number_len);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_1, 
-                "requested_maximum_privilege_level", 
-                requested_maximum_privilege_level);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_1, 
-                "nameonly_lookup", 
-                nameonly_lookup_flag);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_1, 
-                "username_length", 
-                username_len);
-  FIID_OBJ_SET_DATA (obj_cmd,
-                     tmpl_lanplus_rakp_message_1, 
-                     "username",
-                     username,
-                     username_len);
-  
-  return (0);
-}
-
-int8_t
-fill_lanplus_rakp_message_3(u_int8_t message_tag,
-                            u_int8_t rmcpplus_status_code,
-                            u_int32_t managed_system_session_id,
-                            u_int8_t *key_exchange_authentication_code,
-                            u_int32_t key_exchange_authentication_code_len,
-                            fiid_obj_t obj_cmd)
-{
-  if (!obj_cmd || !RMCPPLUS_STATUS_VALID(rmcpplus_status_code))
-    {
-      errno = EINVAL;
-      return (-1);
-    }
-
-  FIID_OBJ_MEMSET (obj_cmd, '\0', tmpl_lanplus_rakp_message_3);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_3, 
-                "message_tag", 
-                message_tag);
-  FIID_OBJ_SET (obj_cmd, 
-                tmpl_lanplus_rakp_message_3, 
-                "managed_system_session_id", 
-                managed_system_session_id);
-
-  if (key_exchange_authentication_code && key_exchange_authentication_code_len > 0)
-    {
-      u_int32_t field_len;
-
-      if ((field_len = fiid_obj_field_len_bytes(tmpl_lanplus_rakp_message_3, 
-                                                "key_exchange_authentication_code")) < 0)
-        return (-1);
-      
-      if (key_exchange_authentication_code_len > field_len)
-        {
-          errno = EINVAL;
-          return (-1);
-        }
-
-      FIID_OBJ_SET_DATA (obj_cmd,
-                         tmpl_lanplus_rakp_message_3,
-                         "key_exchange_authentication_code",
-                         key_exchange_authentication_code,
-                         key_exchange_authentication_code_len);
-      FIID_OBJ_SET (obj_cmd,
-                    tmpl_lanplus_rakp_message_3,
-                    "key_exchange_authentication_code_len",
-                    key_exchange_authentication_code_len);
-    }
-  else
-    FIID_OBJ_SET (obj_cmd,
-                  tmpl_lanplus_rakp_message_3,
-                  "key_exchange_authentication_code_len",
-                  0);
-
-  return (0);
-}
-
 int32_t
 assemble_ipmi_lanplus_pkt (u_int8_t authentication_algorithm,
                            u_int8_t integrity_algorithm,
@@ -1153,12 +1153,12 @@ assemble_ipmi_lanplus_pkt (u_int8_t authentication_algorithm,
 
   FIID_OBJ_ALLOCA (obj_payload, tmpl_lanplus_payload);
 
-  if ((payload_len = fill_lanplus_payload(confidentiality_algorithm,
-                                          obj_cmd,
-                                          tmpl_cmd,
-                                          confidentiality_key,
-                                          confidentiality_key_len,
-                                          obj_payload)) < 0)
+  if ((payload_len = _construct_payload(confidentiality_algorithm,
+                                        obj_cmd,
+                                        tmpl_cmd,
+                                        confidentiality_key,
+                                        confidentiality_key_len,
+                                        obj_payload)) < 0)
     {
       ipmi_debug("fill_lanplus_payload: %s", strerror(errno));
       return (-1);
